--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -16,13 +16,13 @@
     <%= f.text_field :email %>
   </div>
   <div class="field">
-    <%= f.label :crypted_password %><br>
-    <%= f.text_field :crypted_password %>
-  </div>
-  <div class="field">
-    <%= f.label :salt %><br>
-    <%= f.text_field :salt %>
-  </div>
+   <%= f.label :password %><br />
+   <%= f.password_field :password %>
+</div>
+<div class="field">
+   <%= f.label :password_confirmation %><br />
+   <%= f.password_field :password_confirmation %>
+</div>
   <div class="actions">
     <%= f.submit %>
   </div>
